helmCharts/pihole/pihole-ingress.yaml
---
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-web
  namespace: pihole
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`pihole.mycavanaughnetwork.com`)
      kind: Rule
      services:
        - name: pihole-tcp
          kind: TraefikService
          port: 8000
  # Use the secret generated by cert-manager
  tls:
    secretName: pihole-mycavanaughnetwork-cert-staging
